fix: update experiment header style and foldable page to wrap in small widths

--- a/webui/react/src/pages/ExperimentDetails/ExperimentDetailsHeader.module.scss
+++ b/webui/react/src/pages/ExperimentDetails/ExperimentDetailsHeader.module.scss
@@ -1,5 +1,6 @@
 .base {
   font-size: 14px;
+  flex-wrap: wrap;
 
   .state {
     align-items: center;
